0.2.2 -> 0.2.3
- Added instruction code in memory
- Improved readability in memory views
- Fixed memory edition in GUI
- Fixed CPSR/SPSR being usable as common registers
- Fixed broken shift argument (with register)
- Fixed broken shift highlighting/autocompletion
- Fixed incorrect pre/post indexing behaviour, syntax and highlighting
- Fixed incorrect syntax of 'label' arguments


0.2.1 -> 0.2.2

- Added switch for Real Time Parser (color highlighting) and Auto-completion in settings
- Fixed autocompletion popup background transparency
- Fixed bug that prevented the window from being maximized on certain configurations
- Fixed autocompletion compatibility with find & replace
- Fixed a bug that flagged a file as 'modified' when just opened
- Fixed a bug that prevented from using find & replace after simulation


0.2.0 -> 0.2.1

- Added "Add breakpoint" context option
- Added Find & Replace menu in code editor
- Added shortcut for simulation control
- Added autocompletion system
- Added unintentation (Shift+Tab)
- Added version auto-checking
- Improved splash screen
- Improved code highlighting (real time parsing)
- Improved notifications layout
- Improved instruction modifiers handling
- Added BLXNS instruction
- Added BXNS instruction
- Added PUSH instruction
- Added POP instruction
- Added switch in settings to ignore unimplemented/deprecated instructions
- Fixed BLX instruction not being able to use labels
- Fixed STM/LDM instruction not detecting the lack of update mode
- Fixed LDM update mode effects
- Fixed labels/symbols validation
- Fixed editor behaviour when simulation with no opened files
- Fixed shift argument syntax (only usable with registers)
- Fixed instruction (with working register) behaviour


0.1.10 -> 0.2.0

- Added Rating and Hardware requirements (AppStream)
- Added CBZ instruction
- Added CBNZ instruction
- Added CLZ instruction
- Improved instructions system (complete overhaul)
- Improved icons and showcase medias
- Improved i18n (French)